# life_expectancy_forecasting_system

./: .gitignore  README.md  dvc.yaml  main.py  pyproject.toml  requirements.txt  run_pipeline.py
data/: cleaned_dataset.csv  train.csv.dvc
dependencies/: dependencies.py
models/: best_model.pkl.dvc
notebook/: eda.ipynb
pipelines/: data_loader.py  data_preprocessing.py  train.py
routes/: ml_pipeline_route.py  predict_route.py
schemas/request/: predict_lifespan.py
schemas/response/: predict_lifespan.py
services/: data_extraction_service.py  ml_pipeline_service.py  model_manager.py  prediction_service.py
utils/: config.py  logger.py
